--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="./Contact-book.ico">
+    <link rel="icon" href="./phone_icon-icons.com_48251.ico">
     <script src="https://kit.fontawesome.com/5b4e3ea55f.js" crossorigin="anonymous"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
